<resources>
    <string name="app_name">SimplePx</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="discover">Discover</string>
    <string name="flow">Flow</string>
    <string name="editor">Editors\' Choice</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="fresh">Fresh</string>

    <string name="settings">Settings</string>
    <string name="network_error">Network Error: please try again later.</string>

    <string-array name="view_array">
        <item>List View</item>
        <item>Grids View</item>
    </string-array>
</resources>
